# cparser

./: .build_plugin  .firmplugin_update  .gitattributes  .gitignore  .gitmodules  AUTHOR  CMakeLists.txt  Makefile  NEWS  NEWS.md  README  README.md  TODO  actions.c  actions.h  ast.c  ast.h  ast2firm.c  ast2firm.h  ast_grep.c  ast_grep.h  ast_t.h  attribute.c  attribute.h  attribute_t.h  builtins.c  builtins.h  config.default.mak  config.h  config.h.in  config.mak.example  constfold.c  constfold.h  cparser.1  create_builtins_h.sh  diagnostic.c  diagnostic.h  driver.c  driver.h  enable_posix.h  (+70 more)
adt/: align.h  array.c  array.h  bitfiddle.h  error.h  fourcc.h  hash_string.h  hashset.c  hashset.c.h  hashset.h  obst.h  obstack.h  obstack_printf.c  pset.c  pset.h  pset_new.c  separator_t.h  strset.c  strset.h  strutil.c  strutil.h  unicode.h  util.h  xmalloc.c  xmalloc.h
ast/: ast.c  ast.h  attribute.c  constfold.c  constfold.h  constfoldbits.h  entity_t.h  position.h  string_rep.c  string_rep.h  symbol_t.h  symbol_table.c  symbol_table_t.h  type.c  types.c  walk.c
builtins/: builtins.c
driver/: fe_common.h  firm_cmdline.c  firm_cmdline.h  firm_codegen.c  firm_codegen.h  firm_machine.c  firm_machine.h  firm_opt.c  firm_opt.h  firm_timing.c  firm_timing.def  firm_timing.h  gen_firm_asm.c  lang_features.h  machine_triple.h  options.h  target.c  tempfile.c
firm/: ast2firm.c  entitymap_t.h  firm_timing.c  jump_target.h  mangle.c  mangle.h
include/: float.h  iso646.h  limits.h  stdarg.h  stdbool.h  stddef.h
lextest/: do_tests.sh
lextest/legalc/: comment.c  operators.c  splicetest.c  string.c  test1.c  test2.c  trigraphs.c
lextest/numbers/: test
lextest/preprocessor/: recursivedefine  test
lextest/tokenstreams/: charconstants  charconstants.reference  comments  linefeeds  numbers  operators  strings  strings.reference  stringtrigraphs  symbols  t  t3  trigraphs
libsi/: Makefile  si.c
parser/: builtins.c  builtins.h  format_check.c  input.h  parser.c  preprocessor.c  preprocessor.h  token.c  token_t.h
parsetest/: anonstruct.c  array.c  attributes.c  bitfield.c  bitfield2.c  compoundlit.c  compoundlit2.c  compoundlit3.c  constarraytd.c  constexpr.c  constexpr2.c  constexpr3.c  constexpr4.c  constexpr5.c  cp_error001.c  cp_error004.c  cp_error005.c  cp_error006.c  cp_error007.c  cp_error008.c  cp_error009.c  cp_error010.c  cp_error011.c  cp_error012.c  cp_error014.c  cp_error015.c  cp_error016.c  cp_error017.c  cp_error018.c  cp_error019.c  cp_error020.c  cp_error021.c  cp_error022.c  cp_error023.c  cp_error024.c  cp_error025.c  cp_error028.c  cp_error029.c  cp_error030.c  cp_error031.c  (+56 more)
parsetest/MS/: declspec.c  declspec.h  funcname.c  mstypes.c  noop.c  try.c
parsetest/gnu99/: asmname.c  escape.c  (+15 more)
preproctest/: defines.c  digraph_fun.c  directives.c  doubleif.c  edgbug.c  edgbug2.c  gccbug.c  header.h  ifdef.c  ifdef2.c  incifdef.c  include.c  linecomments.c  lineconcat.c  multilinecomment.c  multilinecomments.c  selfinclude.c  simple.c  simpledef.c  simpleifdef.c  simpleinclude.c  spaces.c  t.c  t2.c  t3.c  t8.c  t9.c  test.sh
src/: main.c
support/: check_options.py  make_release.sh
tests/: run_all_tests.sh
vc2005/: cparser.icproj  cparser.vcproj
win32/: config.h.cygwin  config.h.win32  cygwin_math_ext.h  stdbool.h
wrappergen/: write_caml.c  write_caml.h  write_compoundsizes.c  write_compoundsizes.h  write_fluffy.c  write_fluffy.h  write_jna.c  write_jna.h
(+225 files in other folders)
